HDF-594 Fixed issue with not clickabel bottom item in menu on iphone 8

--- a/src/styles/_b-main-header.scss
+++ b/src/styles/_b-main-header.scss
@@ -65,6 +65,7 @@
     width: 100vw;
     height: 100vh;
     background: white;
+    padding-bottom: 80px;
   }
   &__menu-overlay-header {
     display: flex;
